# segmentation_ros

./: CMakeLists.txt  package.xml
action/: imageRoi.action
cmake/: segmentation-genmsg-context.py  segmentation-genmsg.cmake
cmake/Modules/: FindCCV.cmake  FindXcvlLibrary.cmake
src/: ImageRegion.cpp  ImageRegion.h  ImageSource.cpp  ImageSource.h  Results.cpp  Results.h  Roi.cpp  Roi.h  Surface.cpp  Surface.h  communicator.cpp  communicator.h  segmentation.cpp  segmentation.h
