<?xml version="1.0"?>
<package>
  <name>segmentation</name>
  <version>1.0.0</version>
  <description>Segmentation</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="lhindemith@techfak.uni-bielefeld.de">lhindemith</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/tobi_picknplace_server</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="lhindemith@techfak.uni-bielefeld.de">lhindemith</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>segmentation_msgs</build_depend>
  <build_depend>grasping_msgs</build_depend>
  <build_depend>planning_scene_manager_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>segmentation_msgs</run_depend>
  <run_depend>planning_scene_manager_msgs</run_depend>
  <run_depend>grasping_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
